# focaro

./: .gitignore  CLAUDE.md  package-lock.json  package.json  vite.config.ts
.specify/memory/: MEMORY.md  constitution.md
docs/: workflow.md
specs/001-activity-focus-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-activity-focus-tracker/checklists/: requirements.md
specs/001-activity-focus-tracker/contracts/: ipc-commands.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__init.sql  V2__archive.sql  V3__activity_title.sql  V4__shortcut_setting.sql  V5__title_rules_onboarding.sql  V6__goals.sql  V7__app_rules.sql  V8__goal_history.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: activity.rs  export.rs  goal.rs  mod.rs  onboarding.rs  reference.rs  session.rs  settings.rs
src-tauri/src/models/: activity.rs  archive.rs  goal.rs  metrics.rs  mod.rs  onboarding.rs  reference.rs  session.rs  settings.rs
src-tauri/src/services/: activity.rs  archive.rs  browser.rs  classifier.rs  db.rs  goal.rs  metrics.rs  mod.rs  notification.rs  onboarding.rs  reference.rs  session.rs  settings.rs  tracker.rs
src-tauri/src/state/: app_state.rs
src-tauri/tests/: activity_tests.rs  metrics_tests.rs  session_commands_tests.rs
src/__tests__/components/: DonutChart.test.tsx  Dropdown.test.tsx  SaveReference.test.tsx
src/__tests__/components/Dashboard/: ActivityTimeline.test.tsx  TopSites.test.tsx
src/__tests__/components/Dropdown/: QuickOverride.test.tsx
src/__tests__/hooks/: useSession.test.ts
src/__tests__/pages/: Onboarding.test.tsx  SaveReferencePage.test.tsx  Settings.test.tsx
src/components/Dashboard/: ActivityTimeline.tsx  DatePicker.tsx  ExportButton.tsx  FocusScore.tsx  GoalHistory.tsx  HabitInsights.tsx  PatternView.tsx  SavedReferences.tsx  TopSites.tsx  TrendChart.tsx  WeeklyReport.tsx
src/components/Dropdown/: DonutChart.tsx  GoalProgress.tsx  QuickOverride.tsx  SaveReference.tsx  SessionControls.tsx  SessionTimer.tsx
src/components/Settings/: AppRuleSettings.tsx  AutoLaunchSettings.tsx  TitleRuleSettings.tsx
src/hooks/: useSession.ts
src/pages/: Dashboard.tsx  Dropdown.tsx  Onboarding.tsx  SaveReferencePage.tsx  Settings.tsx
src/services/: activity.ts  export.ts  goal.ts  onboarding.ts  reference.ts  session.ts  settings.ts  stats.ts
src/stores/: appStore.ts
src/types/: bindings.ts
