[package]
name = "focaro"
version = "0.1.0"
description = "macOS 메뉴바 기반 활동 추적 집중 관리 도구"
authors = []
edition = "2021"

[lib]
name = "focaro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# DB 마이그레이션
refinery = { version = "0.8", features = ["rusqlite"] }

# macOS 활성 앱 감지
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }

# 타입 공유 (Rust → TypeScript)
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

# 유틸
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
