[package]
name = "focaro"
version = "0.1.0"
description = "macOS 메뉴바 기반 활동 추적 집중 관리 도구"
authors = []
edition = "2021"

[lib]
name = "focaro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# DB 마이그레이션
refinery = { version = "0.8", features = ["rusqlite"] }

# macOS 활성 앱 감지
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }

# macOS NSPanel — 전체화면 위에 표시되는 메뉴바 드롭다운 (moa 동일 방식)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# 타입 공유 (Rust → TypeScript)
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

# 유틸
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

# tauri-nspanel 내부의 구버전 objc 크레이트에서 발생하는 경고 억제 (moa와 동일)
[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"
